Select newly entered transaction as current transaction

BUG: 506627
FIXED-IN: 5.2.1
(cherry picked from commit d83147a35411a1067e7b905ec584a0eef20a3b9a)